# uncluster

./: .gitignore  .gitmodules  1-make-clusters.py  README.md  environment.yml  setup.cfg  setup.py
data/: README.md  apw_menc.txt
docs/: conf.py  index.rst
misc/: README.md
notebooks/: Better GC profile sampling.ipynb  Compare integration.ipynb  Einasto gcs.ipynb  Embed Hernquist profile in NFW potential.ipynb  Embed Plummer profile in Hernquist potential.ipynb  Figure - MW mass evolution.ipynb  Fit mass model.ipynb  Get velocity from eccentricity.ipynb  Hernquist DF.ipynb  Plot mock streams.ipynb  Reproduce Gnedin et al (2014).ipynb  Untitled.ipynb  oleg_galactic_model.ipynb
old_paper/: Makefile  abstract.txt  mwgcs.bib  mwgcs.tex  notes.md  preamble.tex
paper/: .gitignore  ms.tex  mwgcs.bib  mwgcs.tex  notes.md  preamble.tex
paper/figures/: massprofile_scaleradii.py
scripts/: 1-make-cluster-props.py  1-make-clusters.py  2-cluster-orbits.py  2-evolve-clusters.py  2-evolve-each-cluster.py  2-make-mock-streams.py  3-streakline-clusters.py  fit-potential.py  gnedin-make-clusters.py  make-cosmo-interp-grid.py  make_clusters.py  make_streams.py  setup_df.py  setup_potential.py  streakline-each-cluster.py
text/: abstract.txt
uncluster/: __init__.py  config.py  distribution_function.py  gc_massloss.pyx  gnedin_mass_radius.py  log.py  paths.py  pool.py  potential.py  style.py  utils.py
uncluster/cluster_distributions/: apw.py  gnedin.py
uncluster/cluster_massloss/: __init__.py  core.pyx  setup_package.py
uncluster/data/: gnedin_gc_table.txt  (+3 more)
(+21 files in other folders)
